--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,14 +20,14 @@ services:
     volumes:
       - node_data:${WORKDIR_SERVER_NODE}:delegated
 
-  watchtower:
-    container_name: ${NAMESPACE}_watchtower
-    image: containrrr/watchtower
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-    environment:
-      TZ: ${TZ}
-    command: --interval 3600
+  # watchtower:
+  #   container_name: ${NAMESPACE}_watchtower
+  #   image: containrrr/watchtower
+  #   volumes:
+  #     - /var/run/docker.sock:/var/run/docker.sock
+  #   environment:
+  #     TZ: ${TZ}
+  #   command: --interval 3600
 
 volumes:
   node_data:
