--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
+COMPOSE_HTTP_TIMEOUT=1800
+COMPOSE_PROJECT_NAME=pwa
+NAMESPACE=pwa
 # NODE_VERSION=16.17.1-alpine3.16
 NODE_VERSION=18.10.0-alpine3.16
 WORKDIR_SERVER_NODE=/home/node
-WORKDIR_NODE=$PWD/node
-NAMESPACE=mage2
+WORKDIR_NODE=$PWD/pwa-studio
 NODE_ENV=development
 TZ=Europe/Berlin
 UID_GID=1000:1000
-COMPOSE_HTTP_TIMEOUT=1800
-COMPOSE_PROJECT_NAME=mage2
