--- a/.docker/node/Dockerfile
+++ b/.docker/node/Dockerfile
@@ -7,10 +7,7 @@ ENV GROUP=node
 ENV PATH=/home/node/node_modules/.bin:/home/node/.npm-global/bin:$PATH
 
 RUN apk update && apk upgrade \
-    && apk add shadow sudo make g++ git openssh openssl bash dirmngr bash-completion nano tzdata python3 \
+    && apk add make g++ git openssh openssl bash dirmngr bash-completion nano tzdata python3 \
     && rm -rf /var/cache/apk/* \
-    && chmod +x /usr/local/bin/*
-
-RUN echo '%wheel ALL=(ALL) ALL' > /etc/sudoers.d/wheel \
-    && usermod -a -G wheel $USER \
+    && chmod +x /usr/local/bin/* \
     && chown -R $USER:$GROUP /home/$USER
