--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,20 +3,20 @@ version: '3.8'
 services:
 
   node:
-    #    build:
-    #      context: ./.docker/node
-    #      args:
-    #        NODE_VERSION: ${NODE_VERSION}
+    build:
+      context: ./.docker/node
+      args:
+        NODE_VERSION: ${NODE_VERSION}
     container_name: ${NAMESPACE}_node
     image: osioaliu/node:${NODE_VERSION}
+    entrypoint: [ "docker-entrypoint.sh", "tail", "-f", "/dev/null" ]
+    environment:
+      - NODE_ENV=${NODE_ENV}
+      - TZ=${TZ}
     working_dir: $WORKDIR_SERVER_NODE
     user: ${UID_GID}
     ports:
       - "3000:3000"
-    environment:
-      - NODE_ENV=${NODE_ENV}
-      - TZ=${TZ}
-    entrypoint: [ "tail", "-f", "/dev/null" ]
     volumes:
       - node_data:${WORKDIR_SERVER_NODE}:delegated
 
